--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
 		<link type="text/css" rel="stylesheet" href="build/css/global-header.min.css"/>
-		<script src="build/js/global-header.min.js" defer></script>
+		<script type="module" src="build/js/main.min.js" defer></script>
 		<title>Global Header</title>
 	</head>
 
