fixing satyr.io images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="global-header__content">
 				<button class="menu-button js-openMenu" type="button">Open Navigation</button>
 			
-				<a href="/" class="global-header__logo"><img src="https://satyr.io/140x40" alt="Logo" /></a>
+				<a href="/" class="global-header__logo"><img src="build/img/140x40.png" alt="Logo" /></a>
 				
 				<nav class="global-header__nav">
 					<ul class="global-header__nav-list">
